@@ -219,3 +219,15 @@ Feature: W1047
       | W0118 | 8    | 12     |
       | W0723 | 10   | 28     |
       | W1047 | 10   | 18     |
+
+  Scenario: initializing array with address-constant
+    Given a target source named "fixture.c" with:
+      """
+      static int i, j, k;
+      static int *var_tbl[] = { &i, &j, &k }; /* OK */
+      """
+    When I successfully run `adlint fixture.c` on noarch
+    Then the output should exactly match with:
+      | mesg  | line | column |
+      | W0425 | 1    | 15     |
+      | W0425 | 1    | 18     |
